--- a/aspdotnetkube.yml
+++ b/aspdotnetkube.yml
@@ -14,6 +14,9 @@ spec:
         - name: aspnetapp
           image: "mycluster.icp:8500/default/aspnetapp:demo"
           imagePullPolicy: Always
+          env:
+          - name: BASE_PATH
+            value: "/aspnet"
 ---
 apiVersion: v1
 kind: Service
@@ -28,3 +31,20 @@ spec:
   selector:
     run: kube-dotnet
   type: ClusterIP
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: kube-dotnet-ingress
+  namespace: default
+  annotations:
+    ingress.kubernetes.io/rewrite-target: /
+    ingress.kubernetes.io/ssl-redirect: "false"
+spec:
+  rules:
+  - http:
+      paths:
+      - backend:
+          serviceName: kube-dotnet
+          servicePort: 80
+        path: /aspnet
