--- a/dotnet-docker-samples/aspnetapp/aspnetapp/aspnetapp.csproj
+++ b/dotnet-docker-samples/aspnetapp/aspnetapp/aspnetapp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.0.9" />
   </ItemGroup>
 
 </Project>
